# lmtop

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  data-sources.md  privacy.md  releasing.md
docs/images/: social-preview-src.html
scripts/: btop2lmtop.py  setup-apt-repo.sh
src/: alerts.rs  app.rs  branding.rs  cli.rs  config.rs  lib.rs  main.rs  persist.rs
src/aggregation/: mod.rs
src/collectors/: claude.rs  codex.rs  codex_appserver.rs  codex_db.rs  custom.rs  jsonl.rs  live_quota.rs  mod.rs  store.rs
src/diagnostics/: mod.rs
src/domain/: mod.rs  model.rs  quota.rs  session.rs  snapshot.rs  tokens.rs
src/tui/: layout.rs  mod.rs  theme.rs
src/tui/widgets/: breakdown.rs  header.rs  help.rs  mod.rs  planner.rs  provider_panel.rs  rate_chart.rs  session_detail.rs  sessions.rs
tests/: collectors.rs
tests/fixtures/claude/basic/-home-user-projects-gamma/: sess-c1.jsonl
tests/fixtures/claude/corrupt/-home-user-projects-iota/: sess-x.jsonl
tests/fixtures/claude/fork/-home-user-projects-hop/: sess-f1.jsonl  sess-f2.jsonl
tests/fixtures/claude/iterations/-home-user-projects-kappa/: sess-i1.jsonl
tests/fixtures/claude/nested/-home-user-projects-lambda/: sess-n1.jsonl
tests/fixtures/claude/nested/-home-user-projects-lambda/sess-n1/subagents/: agent-aa.jsonl
tests/fixtures/claude/nested/-home-user-projects-lambda/sess-n1/subagents/workflows/wf_01/: agent-bb.jsonl
tests/fixtures/claude/quota/: claude.json
tests/fixtures/codex/basic/sessions/2026/07/17/: rollout-2026-07-17T10-00-00-aaaa.jsonl  rollout-2026-07-17T10-00-01-dup-aaaa.jsonl
tests/fixtures/codex/corrupt/sessions/2026/07/17/: rollout-2026-07-17T11-10-00-cccc.jsonl
tests/fixtures/codex/fork/sessions/2026/07/17/: rollout-2026-07-17T10-30-00-bbbb.jsonl
tests/fixtures/codex/unknown_window/sessions/2026/07/17/: rollout-2026-07-17T11-45-00-eeee.jsonl
tests/fixtures/codex/weekly_only/sessions/2026/07/17/: rollout-2026-07-17T11-30-00-dddd.jsonl
tests/fixtures/demo/: README.md  claude.json  generate.py
tests/fixtures/demo/claude/-home-user-projects-delta/: sess-delta.jsonl
tests/fixtures/demo/claude/-home-user-projects-gamma/: sess-gamma.jsonl
tests/fixtures/demo/claude/-home-user-projects-hop/: sess-hop.jsonl
tests/fixtures/demo/claude/-home-user-projects-lambda/: sess-lambda.jsonl
tests/fixtures/demo/codex/sessions/2026/07/17/: rollout-2026-07-17T06-33-23-alpha.jsonl  rollout-2026-07-17T06-51-23-beta.jsonl
themes/: HotPurpleTrafficLight.toml  adapta.toml  adwaita-dark.toml  adwaita.toml  ayu.toml  catppuccin.toml  dracula.toml  dusklight.toml  elementarish.toml  everforest-dark-hard.toml  everforest-dark-medium.toml  everforest-light-medium.toml  flat-remix-light.toml  flat-remix.toml  flexoki-dark.toml  flexoki-light.toml  gotham.toml  greyscale.toml  gruvbox.toml  gruvbox_dark.toml  gruvbox_dark_v2.toml  gruvbox_light.toml  gruvbox_material_dark.toml  horizon.toml  kanagawa-dragon.toml  kanagawa-lotus.toml  kanagawa-wave.toml  kyli0x.toml  matcha-dark-sea.toml  monokai.toml  night-owl.toml  nord.toml  onedark.toml  orange.toml  paper.toml  phoenix-night.toml  solarized_dark.toml  solarized_light.toml  tokyo-night.toml  tokyo-storm.toml  (+3 more)
