[package]
name = "lmtop"
version = "0.2.1"
edition = "2024"
description = "A live terminal monitor for language-model usage, quotas, and subscription capacity"
repository = "https://github.com/ewijaya/lmtop"
license = "MIT"
readme = "README.md"
keywords = ["tui", "monitoring", "codex", "claude", "usage"]
categories = ["command-line-utilities"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
color-eyre = "0.6.5"
directories = "6.0.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.4", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# native-tls, not rustls: the Codex usage endpoint sits behind bot
# protection that rejects rustls TLS fingerprints (verified empirically);
# an OpenSSL handshake passes, and it is also what the Codex CLI itself uses.
# `vendored` builds OpenSSL from source on Linux (musl releases have no
# system OpenSSL, and glibc builds stop needing libssl-dev + pkg-config);
# on macOS native-tls uses the system Security framework and it is a no-op.
native-tls = { version = "0.2", features = ["vendored"] }
ureq = { version = "2.12", default-features = false, features = ["native-tls", "json"] }
