[package]
name = "lmtop"
version = "0.3.4"
edition = "2024"
description = "A live terminal monitor for language-model usage, quotas, and subscription capacity"
repository = "https://github.com/ewijaya/lmtop"
license = "MIT"
readme = "README.md"
keywords = ["tui", "monitoring", "codex", "claude", "usage"]
categories = ["command-line-utilities"]

# Consumed by cargo-deb in the release workflow to build the .deb packages
# published on GitHub Releases and in the apt repo (ewijaya/apt). The musl
# release binary is fully static, so no Depends is declared.
[package.metadata.deb]
maintainer = "Edward Wijaya <ewijaya@gmail.com>"
section = "utils"
priority = "optional"
depends = ""
extended-description = """\
lmtop ("language-model top") is a terminal dashboard for monitoring usage, \
rate limits, rolling quota windows, reset times, burn velocity, and projected \
exhaustion across AI coding agents such as OpenAI Codex and Claude Code. It \
is designed especially for users on flat-rate subscription plans rather than \
API-only billing."""

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
color-eyre = "0.6.5"
directories = "6.0.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.4", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
toml = "1.1.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# native-tls, not rustls: the Codex usage endpoint sits behind bot
# protection that rejects rustls TLS fingerprints (verified empirically);
# an OpenSSL handshake passes, and it is also what the Codex CLI itself uses.
# `vendored` builds OpenSSL from source on Linux (musl releases have no
# system OpenSSL, and glibc builds stop needing libssl-dev + pkg-config);
# on macOS native-tls uses the system Security framework and it is a no-op.
native-tls = { version = "0.2", features = ["vendored"] }
ureq = { version = "2.12", default-features = false, features = ["native-tls", "json"] }
# Read-only access to the Codex CLI state database (newer Codex versions
# record sessions in SQLite instead of rollout JSONL files). `bundled`
# compiles SQLite from source so musl releases stay self-contained.
rusqlite = { version = "0.40.1", features = ["bundled"] }
